# pane

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TASKS.md  install.sh
.claude/: settings.local.json
crates/pane-daemon/: Cargo.toml
crates/pane-daemon/src/: lib.rs  plugin.rs  system_stats.rs  tab_bar.rs  workspace.rs
crates/pane-daemon/src/server/: command.rs  command_parser.rs  control.rs  daemon.rs  id_map.rs  mod.rs  persistence.rs  state.rs  tmux_shim.rs
crates/pane-daemon/src/session/: mod.rs
crates/pane-daemon/src/window/: mod.rs  pty.rs  terminal.rs
crates/pane-protocol/: Cargo.toml
crates/pane-protocol/src/: app.rs  config.rs  default_keys.rs  event.rs  framing.rs  keys.rs  layout.rs  lib.rs  plugin.rs  protocol.rs  registry.rs  system_stats.rs  window_types.rs
crates/pane-protocol/src/session/: mod.rs  store.rs
crates/pane-tui/: Cargo.toml
crates/pane-tui/src/: client.rs  clipboard.rs  copy_mode.rs  event.rs  main.rs  tui.rs
crates/pane-tui/src/ui/: command_palette.rs  context_menu.rs  dialog.rs  format.rs  help.rs  layout_render.rs  mod.rs  overview.rs  palette.rs  project_hub.rs  snapshot_tests.rs  status_bar.rs  tab_picker.rs  tests_context_menu.rs  tests_dialog.rs  tests_palette.rs  tests_resize.rs  tests_status_bar.rs  tests_tab_picker.rs  tests_window_view.rs  tests_workspace_bar.rs  which_key.rs  widget_picker.rs  window_view.rs  workspace_bar.rs
crates/pane-tui/src/ui/snapshots/: pane__ui__snapshot_tests__folded_window.snap  pane__ui__snapshot_tests__home_focus_returned_to_sidebar.snap  pane__ui__snapshot_tests__home_four_widgets_br_focused.snap  pane__ui__snapshot_tests__home_second_widget_focused.snap  pane__ui__snapshot_tests__home_sidebar_focused_all_inactive.snap  pane__ui__snapshot_tests__home_small_terminal.snap  pane__ui__snapshot_tests__home_three_widgets_middle_focused.snap  pane__ui__snapshot_tests__home_widget_focused.snap  pane__ui__snapshot_tests__home_with_other_workspaces.snap  pane__ui__snapshot_tests__home_workspace.snap  pane__ui__snapshot_tests__home_ws_bar_focused.snap  pane__ui__snapshot_tests__multiple_workspaces.snap  pane__ui__snapshot_tests__named_window.snap  pane__ui__snapshot_tests__normal_ws_active_window.snap  pane__ui__snapshot_tests__normal_ws_bar_focused.snap  pane__ui__snapshot_tests__resize_four_way_inner_correct.snap  pane__ui__snapshot_tests__resize_nested_hsplit_before.snap  pane__ui__snapshot_tests__resize_nested_hsplit_broken.snap  pane__ui__snapshot_tests__resize_nested_hsplit_correct.snap  pane__ui__snapshot_tests__resize_nested_vsplit_correct.snap  pane__ui__snapshot_tests__single_workspace_hsplit.snap  pane__ui__snapshot_tests__single_workspace_single_window.snap  pane__ui__snapshot_tests__single_workspace_vsplit.snap  pane__ui__snapshot_tests__small_terminal.snap  pane__ui__snapshot_tests__three_way_split.snap  pane__ui__snapshot_tests__window_with_multiple_tabs.snap  pane__ui__tests_context_menu__ctx_menu_clamped_position.snap  pane__ui__tests_context_menu__ctx_menu_home_body.snap  pane__ui__tests_context_menu__ctx_menu_pane_body.snap  pane__ui__tests_context_menu__ctx_menu_selected_second.snap  pane__ui__tests_context_menu__ctx_menu_tab_bar.snap  pane__ui__tests_context_menu__ctx_menu_workspace_bar.snap  pane__ui__tests_context_menu__widget_picker_change_mode.snap  pane__ui__tests_context_menu__widget_picker_selected_fifth.snap  pane__ui__tests_context_menu__widget_picker_split_h.snap  pane__ui__tests_dialog__confirm_default.snap  pane__ui__tests_dialog__confirm_long_message.snap  pane__ui__tests_dialog__confirm_small_terminal.snap  pane__ui__tests_dialog__new_workspace_dir_stage.snap  pane__ui__tests_dialog__new_workspace_dir_stage_browse_with_toggle.snap  (+54 more)
crates/pane-tui/src/window/: terminal.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALL.md  cmux-inspiration.md
pane-app/: .gitignore  Package.swift  Project.swift  Tuist.swift  Workspace.swift
site/: README.md  astro.config.mjs
src/: app.rs  client.rs  clipboard.rs  config.rs  copy_mode.rs  default_keys.rs  event.rs  keys.rs  layout.rs  layout_presets.rs  (+5 more)
(+86 files in other folders)
