[package]
name = "pane-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
pane-protocol = { path = "../pane-protocol" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
vt100 = "0.16.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
nix = { version = "0.29", features = ["user", "signal"] }
sysinfo = "0.31"
