[package]
name = "pane-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
