[package]
name = "pane-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
