[package]
name = "pane-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pane"
path = "src/main.rs"

[dependencies]
pane-protocol = { path = "../pane-protocol" }
pane-daemon = { path = "../pane-daemon" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
vt100 = "0.15"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
arboard = "3"
