[package]
name = "pane-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pane"
path = "src/main.rs"

[dependencies]
pane-protocol = { path = "../pane-protocol" }
pane-daemon = { path = "../pane-daemon" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
vt100 = "0.16.2"
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
arboard = "3"
unicode-width = "0.2.0"
dirs = "5"

[dev-dependencies]
insta = "1"
uuid = { version = "1", features = ["v4", "serde"] }
